--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<div>TESTING</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Test Page</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css"
+    </head>
+    <body>
+        <header>
+
+        </header>
+        
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
+    </body>
+</html>
