new paragraph in index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-
+            <p>world can be a mad place</p>
         </header>
         
         <main>
