--- a/index.html
+++ b/index.html
@@ -2,21 +2,9 @@
 <html>
     <head>
         <title>Test Page</title>
-        <link href="css/styles.css" rel="stylesheet" type="text/css"
     </head>
     <body>
-        <header>
-            <p>world can be a mad place</p>
-            <div>Test text</div> 
-            <!-- Text added to body via DIV-->
-        </header>
-        
-        <main>
-            <p>Chewbacca!</p>
-        </main>
-
-        <footer>
-
-        </footer>
+        <p id="welcome-el"></p>
+        <script src="index.js"></script>
     </body>
 </html>
